# CMake-Template

./: CMakeLists.txt  LICENSE  README.md  cmake-tools-kits.json
my-project/: CMakeLists.txt
my-project/src/: main.cpp
solution-dir/: CMakeLists.txt  README.md
solution-dir/my-project/: CMakeLists.txt
solution-dir/my-project/src/: main.cpp
vscode/: cmake-variants.yaml  launch.json  settings.json
